--- a/public/blog/2019-12-15-python-experience.Rmd
+++ b/public/blog/2019-12-15-python-experience.Rmd
@@ -1,14 +1,12 @@
 ---
-title: "First time with Python"
-author: "Brianna Weber"
-date: 2019-12-13T21:13:14-05:00
-categories: ["R"]
-tags: ["R Markdown", "plot", "regression"]
+title: Python Experience
+author: ''
+date: '2019-12-15'
+slug: python-experience
+categories: []
+tags: []
+description: ''
 ---
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(collapse = TRUE)
-```
 
 I was not excited to learn python, it took me so long to finally understand are on a basic level. I was scared to switch to a second coding language. 
 
